--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,8 +1,14 @@
+@define-color ws-active     #94e2d5;
+@define-color ws-inactive   #585b70;
+@define-color ws-hover      #dddddd;
+@define-color ws-urgent     #ff3333;
+
 * {
     font-family: 'JetBrainsMono', 'Hack', 'Segoe UI', 'JetBrainsMono Nerd Font', sans-serif;
     font-size: 14px;
     min-height: 0;
     padding: 0px;
+    /* --workspace-active: rgb(148, 226, 213); */
 }
 #waybar {
     background: transparent;
@@ -21,32 +27,62 @@
     /* padding: 0.3rem 0.7rem; */
     margin: 5px 0px; /* 5px top-bottom, 0px left-right*/
     padding: 2px;
-    border-radius: 6px;
+    /* border-radius: 6px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     min-width: 0;
     border: none;
     /* Transition for background-color and color only */
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
+/* #workspaces button { */
+/*     color: #babbf1; */
+/*     border-radius: 5px; */
+/*     padding: 0.3rem 0.6rem; */
+/*     background: transparent; */
+/*     transition: all 0.2s ease-in-out; */
+/*     border: none; */
+/*     outline: none; */
+/* } */
+/* #workspaces button.active { */
+/*     color: #99d1db; */
+/*     background-color: rgba(153, 209, 219, 0.1); */
+/*     box-shadow: inset 0 0 0 1px rgba(153, 209, 219, 0.2); */
+/* } */
+/* #workspaces button:hover { */
+/*     background: rgb(41, 42, 53); */
+/*     color: #c6d0f5; */
+/* } */
+
 #workspaces button {
-    color: #babbf1;
-    border-radius: 5px; /* Workspaces buttons are always rounded */
-    padding: 0.3rem 0.6rem;
-    background: transparent;
+    /* padding: 0 1rem; */
+    font-size: 0px;
+    min-width: 16px;
+    min-height: 16px;
+    border-radius: 100px;
+    margin: 4px;
     transition: all 0.2s ease-in-out;
-    border: none;
-    outline: none;
+
+    background: @ws-inactive;
+    border: 2px solid @ws-inactive;
+}
+#workspaces button.empty {
+    background: none;
+    border-color: @ws-inactive;
 }
 #workspaces button.active {
-    color: #99d1db;
-    background-color: rgba(153, 209, 219, 0.1);
-    box-shadow: inset 0 0 0 1px rgba(153, 209, 219, 0.2);
+    background: @ws-active;
+    border-color: @ws-active;
 }
 #workspaces button:hover {
-    background: rgb(41, 42, 53); /* Reference bright hover color */
-    color: #c6d0f5;
+    background: @ws-hover;
+    border-color: @ws-hover;
 }
-
+#workspaces button.urgent {
+    background: @ws-urgent;
+    border-color: @ws-urgent;
+}
 
 /* --- ANIMATION --- */
 #pulseaudio,
