--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -23,7 +23,7 @@
 
     background: rgba(20, 20, 20, 0.7);
     margin: 20px;
-	/* padding: doesn't work here; */
+	/* padding doesn't work here; Using modules */
 
 	border-bottom: 3px;
 	border-color: @bg-panel;
@@ -34,9 +34,9 @@
 }
 
 
-.modules-left   { margin-top: 6px; margin-left: 10px; }
-.modules-center { margin-top: 6px; }
-.modules-right  { margin-top: 6px; margin-right:10px; }
+.modules-left   { margin-top: 5px; margin-left: 10px; }
+.modules-center { margin-top: 5px; }
+.modules-right  { margin-top: 5px; margin-right:10px; }
 
 
 /* MODULE: Workspaces */
@@ -54,9 +54,8 @@
 }
 #workspaces button {
     /* padding: 0 1rem; */
-    font-size: 1px;
-    min-width: 20px;
-    min-height: 18px;
+    min-width: 14px;
+    min-height: 14px;
     border-radius: 100px;
     margin: 4px;
     transition: all 0.2s ease-in-out;
@@ -64,6 +63,8 @@
     background: @ws-inactive;
     border: 2px solid @ws-inactive;
 }
+#workspaces button label { font-size: 1px; }
+
 #workspaces button.empty {
     background: none;			border-color: @ws-inactive;
 }
